--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
-	"name" : "inputs",
-	"appid" : "__UNI__382A9B5",
+	"name" : "test",
+	"appid" : "__UNI__A6D27AA",
 	"description": "",
 	"versionName": "1.0.0",
 	"versionCode": "100",
 	"transformPx": false,
 	"app-plus": { /* 5+App特有相关 */
 		"splashscreen": {
+			"alwaysShowBeforeRender": true,
+			"waiting": true,
 			"autoclose": true,
-			"waiting": true
+			"delay": 0
 		},
 		"modules": { /* 模块配置 */
 
