input类型新增 左边自定义图标、一键清除功能、密码显隐功能

--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,7 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "wxb85d2b3d674a1957",
+        "appid" : "",
         "setting" : {
             "urlCheck" : true
         }
