--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "test",
-    "appid" : "__UNI__A6D27AA",
+    "appid" : "",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -57,6 +57,7 @@
         "appid" : "",
         "setting" : {
             "urlCheck" : true
-        }
+        },
+        "usingComponents":false //是否启用`自定义组件模式`，为true表示新的`自定义组件模式`，否则启用老的`template模板模式` 
     }
 }
