--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,8 @@
             "ios" : {},
             /* ios打包配置 */
             "sdkConfigs" : {}
-        }
+        },
+		"usingComponents":true //是否启用`自定义组件模式`，为true表示新的`自定义组件模式`，否则启用老的`template模板模式` 
     },
     /* SDK配置 */
     "quickapp" : {},
@@ -58,6 +59,6 @@
         "setting" : {
             "urlCheck" : true
         },
-        "usingComponents":false //是否启用`自定义组件模式`，为true表示新的`自定义组件模式`，否则启用老的`template模板模式` 
+        "usingComponents":true //是否启用`自定义组件模式`，为true表示新的`自定义组件模式`，否则启用老的`template模板模式` 
     }
 }
