--- a/manifest.json
+++ b/manifest.json
@@ -60,5 +60,8 @@
             "urlCheck" : true
         },
         "usingComponents" : true //是否启用`自定义组件模式`，为true表示新的`自定义组件模式`，否则启用老的`template模板模式` 
+    },
+    "mp-alipay" : {
+        "usingComponents" : true
     }
 }
